--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "dotenv": "^8.2.0",
+    "google-map-react": "^2.1.9",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
   }
