--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,10 @@
       "**/node_modules/**",
       "**/*.py",
       "**/*.md"
-    ]
+    ],
+    "rewrites": [ {
+      "source": "**",
+      "destination": "/index.html"
+    } ]
   }
 }
